syntax = "proto3";

package user;

option go_package = "./pb";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (EmptyResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc GetUserByID (GetUserByIDRequest) returns (UserResponse);
    rpc GetAllUsers (EmptyRequest) returns (UsersResponse);
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
    string name = 3;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message GetUserByIDRequest {
    int32 id = 1;
}

message EmptyRequest {}

message EmptyResponse {}

message UserResponse {
    int32 id = 1;
    string username = 2;
    string name = 3;
}

message UsersResponse {
    repeated UserResponse users = 1;
}

message LoginResponse {
    string token = 1;
}